[package]
name = "project-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[features]
slint = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"


